# glassd-qt

./: 63-glassd-uinput.rules  CMakeLists.txt  Gesture_handlers.h  Gesture_mapper.cpp  Gesture_mapper.h  Glassd.cpp  Glassd.h  Glassd_dbus.h  README.md  glassd.cpp  glassd.h  glassd_copy.cpp  main.cpp  viz_wrangler.cpp  viz_wrangler.h
glassd-kwin/: metadata.json
glassd-kwin/contents/code/: main.js
qml/: viz_default.qml
